[tool.poetry]
name = "slack-bot"
version = "0.1.0"
description = ""
authors = ["Suren <parsyansuren@gmail.com>"]
readme = "README.md"
packages = [{include = "slack_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
slack-bolt = "^1.18.0"
instasave = "^0.3.0"
media-parser = "^1.1.3"
requests = "^2.31.0"
urllib3 = "^2.0.7"
insta-scrape = "^2.1.2"
instaloader = "^4.10.1"
flask = "2"
werkzeug = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

