[tool.poetry]
name = "slack-bot"
version = "0.1.0"
description = ""
authors = ["Suren <parsyansuren@gmail.com>"]
readme = "README.md"
packages = [{include = "slack_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
slack-bolt = "^1.18.0"
requests = "^2.31.0"
instaloader = "^4.10.1"
flask = "^2"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

